[package]
name = "sense8-gen"
version = "0.0.1"
authors = ["cklewar <c.klewar@f5.com>"]
description = "F5 XC Regression Test CI pipeline file generator"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tera = "1.19.0"
clap = { version = "4.3.5", features = ["derive"] }

[[bin]]
name = "main"
