[package]
name = "sense8-ci-generator"
version = "0.0.4"
authors = ["cklewar <c.klewar@f5.com>"]
description = "F5 XC Regression CI pipeline file generator"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tera = "1.19.0"
clap = { version = "4.3.5", features = ["derive"] }
indradb-lib = {version = "4.0.0"}
lazy_static = "1.4.0"
uuid = "1.3.4"
log = "0.4.19"
env_logger = "0.10.0"
phf = { version = "0.11", features = ["macros"] }
graphviz-rust = "0.6.2"
rand = "0.8.5"
