[package]
name = "sense8-ci-generator"
version = "0.1.5"
authors = ["cklewar <c.klewar@f5.com>"]
description = "F5 XC Regression CI pipeline file generator"
edition = "2021"
license = "Apache-2.0"

[[bin]]
edition = "2021"
name = "sense8"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tera = "1.19.0"
clap = { version = "4.3.5", features = ["derive"] }
indradb-lib = {version = "4.0.0"}
lazy_static = "1.4.0"
uuid = "1.3.4"
log = "0.4.19"
env_logger = "0.11"
graphviz-rust = "0.9.0"
rand = "0.8.5"
regex = "1.9.6"
serde_yaml = "0.9.30"
typetag = "0.2"
